AWS_LAB_Files/CloudFormation/Full_AWS_Infra_Deployment.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Creates VPC, 2 Subnets, 2 EC2 machines with Nginx, ALB with TG machines added",
	"Metadata": {
		"AWS::CloudFormation::Interface": {
			"ParameterGroups": [
				{
					"Label": {
						"default": "VPC configuration parameters"
					},
					"Parameters": [
						"VPCNAME",
						"VPCCIDR",
						"PublicSubnetCIDR",
						"PublicSubnetCIDR2",
						"SSHLocation"
					]
				}
			],
			"ParameterLabels": {
				"VPCNAME": {
					"default": "Name of new VPC"
				},
				"VPCCIDR": {
					"default": "Enter CIDR of new VPC"
				},
				"PublicSubnetCIDR": {
					"default": "Enter CIDR of the public subnet"
				},
				"PublicSubnetCIDR2": {
					"default": "Enter CIDR of the public subnet"
				},
				"SSHLocation": {
					"default": "Subnet allowed to ssh on TCP to public subnet"
				}
			}
		}
	},
	"Parameters": {
		"VPCNAME": {
			"Default": "TEST-VPC",
			"Description": "CIDR block for entire VPC.",
			"Type": "String"
		},
		"VPCCIDR": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
			"Default": "10.10.0.0/16",
			"Description": "CIDR block for entire VPC.",
			"Type": "String"
		},
		"PublicSubnetCIDR": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
			"Default": "10.10.10.0/24",
			"Description": "CIDR block for the public subnet",
			"Type": "String"
		},
		"PublicSubnetCIDR2": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
			"Default": "10.10.20.0/24",
			"Description": "CIDR block for the public subnet",
			"Type": "String"
		},
		"SSHLocation": {
			"AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
			"ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/0-28",
			"Default": "0.0.0.0/0",
			"Description": "Network allowed to ssh to instances in public subnet.",
			"Type": "String"
		}
	},
	"Mappings": {},
	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"EnableDnsSupport": "true",
				"EnableDnsHostnames": "true",
				"CidrBlock": {
					"Ref": "VPCCIDR"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {"Ref": "VPCNAME"}
					},
					{
						"Key": "CloudFormationStack",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
				]
			}
		},
		"InternetGateway": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {
				"Tags": [
					{
						"Key": "Name",
						"Value": "IGW"
					},
					{
						"Key": "CloudFormationStack",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
				]
			}
		},
		"PublicSubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": "us-east-1a",
				"CidrBlock": {
					"Ref": "PublicSubnetCIDR"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"",
								[
									"Public ",
									{
										"Ref": "PublicSubnetCIDR"
									}
								]
							]
						}
					},
					{
						"Key": "CloudFormationStack",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
				]
			}
		},
		"PublicSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"AvailabilityZone": "us-east-1b",
				"CidrBlock": {
					"Ref": "PublicSubnetCIDR2"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"",
								[
									"Public ",
									{
										"Ref": "PublicSubnetCIDR2"
									}
								]
							]
						}
					},
					{
						"Key": "CloudFormationStack",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
				]
			}
		},
		"AttachGateway": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicSubnetRouteTable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"",
								[
									"Public ",
									{
										"Ref": "PublicSubnetCIDR"
									}
								]
							]
						}
					},
					{
						"Key": "CloudFormationStack",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
				]
			}
		},
		"PublicRoute": {
			"Type": "AWS::EC2::Route",
			"DependsOn": "AttachGateway",
			"Properties": {
				"RouteTableId": {
					"Ref": "PublicSubnetRouteTable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "InternetGateway"
				}
			}
		},
		"PublicSubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet"
				},
				"RouteTableId": {
					"Ref": "PublicSubnetRouteTable"
				}
			}
		},
		"PublicSubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "PublicSubnet2"
				},
				"RouteTableId": {
					"Ref": "PublicSubnetRouteTable"
				}
			}
		},
		"PublicInstanceSG": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"GroupDescription": "Enable SSH access via port 22",
				"SecurityGroupIngress": [
					{
						"IpProtocol": "tcp",
						"FromPort": "22",
						"ToPort": "22",
						"CidrIp": {
							"Ref": "SSHLocation"
						}
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "-1",
						"CidrIp": "0.0.0.0/0"
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": {
							"Fn::Join": [
								"",
								[
									"PublicSG ",
									{
										"Ref": "VPCCIDR"
									}
								]
							]
						}
					},
					{
						"Key": "CloudFormationStack",
						"Value": {
							"Ref": "AWS::StackId"
						}
					}
				]
			}
		},
		"WebServer1": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": "ami-032930428bf1abbff",
				"InstanceType": "t2.nano",
				"KeyName": "LaptopKey",
				"Tags": [
					{
						"Key": "Name",
						"Value": "Server-1"
					}
				],
				"NetworkInterfaces": [
					{
						"AssociatePublicIpAddress": "true",
						"DeviceIndex": "0",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "PublicSubnet"
						},
						"GroupSet": [
							{
								"Ref": "PublicInstanceSG"
							}
						]
					}
				],
				"UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
					"#!/bin/bash -xe\n",
					"yum install -y nginx\n",
					"service nginx start\n",
					"echo '<h1>WEBSERVER-1</h1>' >> /usr/share/nginx/html/index.html\n"  
				  ]]}}
			}
		},
		"WebServer2": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": "ami-032930428bf1abbff",
				"InstanceType": "t2.nano",
				"KeyName": "LaptopKey",
				"Tags": [
					{
						"Key": "Name",
						"Value": "Server-2"
					}
				],
				"NetworkInterfaces": [
					{
						"AssociatePublicIpAddress": "true",
						"DeviceIndex": "0",
						"DeleteOnTermination": "true",
						"SubnetId": {
							"Ref": "PublicSubnet2"
						},
						"GroupSet": [
							{
								"Ref": "PublicInstanceSG"
							}
						]
					}
				],
				"UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
					"#!/bin/bash -xe\n",
					"yum install -y nginx\n",
					"service nginx start\n",
					"echo '<h1>WEBSERVER-2</h1>' >> /usr/share/nginx/html/index.html\n"  
				  ]]}}
			}
		},
		"LoadBalancer": {
			"Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
			"Properties": {
				"Name": "ALB",
				"Subnets": [
					{
						"Ref": "PublicSubnet"
					},
					{
						"Ref": "PublicSubnet2"
					}
				],
				"SecurityGroups": [
					{
						"Ref": "PublicInstanceSG"
					}
				],
				"Tags": [
					{
						"Key": "Name",
						"Value": "ALB"
					}
				]
			}
		},
		"LoadBalancerListener": {
			"Type": "AWS::ElasticLoadBalancingV2::Listener",
			"Properties": {
				"LoadBalancerArn": {
					"Ref": "LoadBalancer"
				},
				"Port": 80,
				"Protocol": "HTTP",
				"DefaultActions": [
					{
						"Type": "forward",
						"TargetGroupArn": {
							"Ref": "DefaultTargetGroup"
						}
					}
				]
			}
		},
		"DefaultTargetGroup": {
			"Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
			"Properties": {
				"Name": "ALB-TG",
				"VpcId": {
					"Ref": "VPC"
				},
				"Targets": [
					{
						"Id": {
							"Ref": "WebServer1"
						},
						"Port": 80
					},
					{
						"Id": {
							"Ref": "WebServer2"
						},
						"Port": 80
					}
				],
				"Port": 80,
				"Protocol": "HTTP"
			}
		}
	},
	"Outputs": {
		"VPCId": {
			"Description": "VPCId of the newly created VPC",
			"Value": {
				"Ref": "VPC"
			}
		},
		"PublicSubnet": {
			"Description": "SubnetId of the public subnet",
			"Value": {
				"Ref": "PublicSubnet"
			}
		},
		"PublicSubnetRouteTable": {
			"Description": "Public route table",
			"Value": {
				"Ref": "PublicSubnetRouteTable"
			}
		},
		"PublicInstanceSG": {
			"Description": "SG for instances in public subnet",
			"Value": {
				"Ref": "PublicInstanceSG"
			}
		}
	}
}
