AWS_LAB_Files/CloudFormation/Import_All_Resources.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "CF Template for AWS Telugu Batch B26",
    "Metadata": {
        "AWS::CloudFormation::Interface": {
            "ParameterGroups": [
                {
                    "Label": {
                        "default": "VPC configuration parameters"
                    },
                    "Parameters": [
                        "VPCNAME",
                        "VPCCIDR",
                        "PublicSubnetCIDR",
                        "PublicSubnetCIDR2",
                        "SSHLocation"
                    ]
                }
            ],
            "ParameterLabels": {
                "VPCNAME": {
                    "default": "Enter Name Label of new VPC"
                },
                "VPCCIDR": {
                    "default": "Enter CIDR of new VPC"
                },
                "PublicSubnetCIDR": {
                    "default": "Enter CIDR of the public subnet-1"
                },
                "PublicSubnetCIDR2": {
                    "default": "Enter CIDR of the public subnet-2"
                },
                "SSHLocation": {
                    "default": "Subnet allowed to ssh on TCP to public subnet"
                }
            }
        }
    },
    "Parameters": {
        "VPCNAME": {
            "Default": "AWSB26CF",
            "Description": "Name Tag for the New VPC",
            "Type": "String"
        },
        "VPCCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.10.0.0/16",
            "Description": "CIDR block for entire VPC.",
            "Type": "String"
        },
        "PublicSubnetCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.10.10.0/24",
            "Description": "CIDR block for the public subnet",
            "Type": "String"
        },
        "PublicSubnetCIDR2": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Default": "10.10.20.0/24",
            "Description": "CIDR block for the public subnet 2",
            "Type": "String"
        },
        "SSHLocation": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/([0-9]|[1-2][0-9]|3[0-2]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/0-28",
            "Default": "0.0.0.0/0",
            "Description": "Network allowed to ssh to instances in public subnet.",
            "Type": "String"
        }
    },
    "Mappings": {
        "RegionMap": {
            "us-east-1": {
                "HVM64": "ami-0947d2ba12ee1ff75"
            },
            "us-east-2": {
                "HVM64": "ami-03657b56516ab7912"
            }
        }
    },
    "Resources": {
        "VPC": {
            "Type": "AWS::EC2::VPC",
            "DeletionPolicy": "Retain",
            "Properties": {
                "EnableDnsSupport": "true",
                "EnableDnsHostnames": "true",
                "CidrBlock": {
                    "Ref": "VPCCIDR"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Ref": "VPCNAME"
                        }
                    },
                    {
                        "Key": "CloudFormationStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "DeletionPolicy": "Retain",
            "Properties": {
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "VPCNAME"
                                    },
                                    "IGW"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "CloudFormationStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "DeletionPolicy": "Retain",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": {
                    "Ref": "PublicSubnetCIDR"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "VPCNAME"
                                    },
                                    "Subnet-1"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Owner",
                        "Value": "Sree"
                    },
                    {
                        "Key": "Env",
                        "Value": "Prod"
                    },
                    {
                        "Key": "CloudFormationStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PublicSubnet2": {
            "Type": "AWS::EC2::Subnet",
            "DeletionPolicy": "Retain",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "CidrBlock": {
                    "Ref": "PublicSubnetCIDR2"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "VPCNAME"
                                    },
                                    "Subnet-2"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "Title",
                        "Value": "BurningStar"
                    },
                    {
                        "Key": "CloudFormationStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PublicSubnetRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "DeletionPolicy": "Retain",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "VPCNAME"
                                    },
                                    "Routing-Table"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "CloudFormationStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "PublicInstanceSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "DeletionPolicy": "Retain",
            "Properties": {
                "VpcId": {
                    "Ref": "VPC"
                },
                "GroupDescription": "Enable SSH access via port 22",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "22",
                        "ToPort": "22",
                        "CidrIp": {
                            "Ref": "SSHLocation"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "80",
                        "ToPort": "80",
                        "CidrIp": "0.0.0.0/0"
                    }
                ],
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": {
                            "Fn::Join": [
                                "-",
                                [
                                    {
                                        "Ref": "VPCNAME"
                                    },
                                    "SG_Allow_All"
                                ]
                            ]
                        }
                    },
                    {
                        "Key": "CloudFormationStack",
                        "Value": {
                            "Ref": "AWS::StackId"
                        }
                    }
                ]
            }
        },
        "WebServer1": {
            "Type": "AWS::EC2::Instance",
            "DeletionPolicy": "Retain",
            "Properties": {
                "ImageId": {
                    "Fn::FindInMap": [
                        "RegionMap",
                        {
                            "Ref": "AWS::Region"
                        },
                        "HVM64"
                    ]
                },
                "InstanceType": "t2.nano",
                "KeyName": "LaptopKey",
                "Tags": [
                    {
                        "Key": "Name",
                        "Value": "Import-Server-001"
                    },
                    {
                        "Key": "Title",
                        "Value": "BurningStar"
                    }
                ],
                "NetworkInterfaces": [
                    {
                        "AssociatePublicIpAddress": "true",
                        "DeviceIndex": "0",
                        "DeleteOnTermination": "true",
                        "SubnetId": {
                            "Ref": "PublicSubnet"
                        },
                        "GroupSet": [
                            {
                                "Ref": "PublicInstanceSG"
                            }
                        ]
                    }
                ]
            }
        }
    }
}
